[package]
name = "kite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
crossterm = "0.28.1"
directories = "6.0.0"
feed-rs = "2.3.1"
html-escape = "0.2.13"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["brotli", "charset", "gzip", "http2", "json", "rustls-tls", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
toml = "1.1.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v5"] }
